--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vikingtidsmuseet</title>
     <link rel="stylesheet" href="./CSS/reset.css">
+    <link rel="stylesheet" href="./CSS/textstyles.css">
 </head>
 <body>
-    <h1>Hello world</h1>
+    <h1>Explore the Museum of the Viking Age</h1>
+    <p>dette er en paragraph</p>
+
+    <h2>dette er h2</h2>
+    <h3>Dette er h3</h3>
 </body>
 </html>
