--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
     <title>Vikingtidsmuseet</title>
     <link rel="stylesheet" href="./CSS/reset.css">
     <link rel="stylesheet" href="./CSS/textstyles.css">
+    <link rel="stylesheet" href="./CSS/colors.css">
+    <link rel="stylesheet" href="./CSS/cover.css">
 </head>
 <body>
-    <h1>Explore the Museum of the Viking Age</h1>
-    <p>dette er en paragraph</p>
 
-    <h2>dette er h2</h2>
-    <h3>Dette er h3</h3>
+    <div class="hero-container">
+        <img src="./Assets/Museet.jpg" alt="" class="hero__cover">
+        
+        <div class="hero_box card_box white_text">
+            <p>Mon - Fri 10-19 | Sat - Sun 11-20</p>
+            <h1>Explore the Museum of the Viking Age</h1>
+        </div>
+        
+    </div>
+
 </body>
 </html>
