--- a/Explore_the_museum.html
+++ b/Explore_the_museum.html
@@ -22,9 +22,28 @@
 
                     </div>
 
-                    <div class="card__text card_box">
-                        text 
+                    <div class="card__text card_box white_text">
+                        <h3>Oseberg ship</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi porta sit mauris faucibus aliquet et. Volutpat aliquam et, diam libero ultricies dictum et. Ullamcorper sed aliquam amet leo odio sed dictum praesent ac. Nunc et, cras ligula iaculis vitae nisl vivamus nec sagittis.</p>
+
                     </div>
+                </div>
+
+                <div class="card__wrapper">
+
+
+                    <div class="card__text--reverse card_box white_text">
+                    <h3>Gokstad  ship</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rutrum nullam nisi enim, felis elit at diam tellus. Viverra diam lorem nunc viverra amet. </p>
+
+
+                    </div>
+
+                    <div class="card__img">
+                        <img class="card_img_img" src="./Assets/Gokstad_skipet.jpeg">
+
+                    </div>
+                    
                 </div>
 
         </section>
