--- a/Landig_page.html
+++ b/Landig_page.html
@@ -17,6 +17,10 @@
 header
 </header>
 
+    <div class="Hero">
+        <h1>Hero</h1>
+    </div>
+
 
     <div class="con sli">
      <h1>Our newest exhibitions</h1>
