--- a/Explore_the_museum.html
+++ b/Explore_the_museum.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vikingtidsmuseet</title>
     <link rel="stylesheet" href="./CSS/reset.css">
+    <link rel="stylesheet" href="./CSS/colors.css">
+    <link rel="stylesheet" href="./CSS/root.css">
     <link rel="stylesheet" href="./CSS/textstyles.css">
     <link rel="stylesheet" href="./CSS/body_LP.css">
-    <link rel="Stylesheet" href="./CSS/colors.css">
+    <link rel="stylesheet" href="./CSS/stylesheet.css">
+    <link rel="stylesheet" href="./CSS/slideshow.css">
     <link rel="stylesheet" href="./CSS/Card_img_text.css">
 </head>
 
