footer color done

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ header
     </div>
 
     <footer>
-        <div class="footer-wrapper">
+        <div class="footer-wrapper footer-style">
             <div class="footer-wrapper__logo">
                 <img src="./assets/logo vikingtidmuseet.png">
             </div>
