--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ header
                     FAQ
                 </div>
                 <div class="box footer-wrapper__box--small social-order">
-                    <img class="i__img" src="./assets/facebook.png">
+                    <img class="i__img-margin-fix" src="./assets/facebook.png">
                     <img class="i__img" src="./assets/instagram.png">
                 </div>
             </div>
