making header not done

--- a/index.html
+++ b/index.html
@@ -12,13 +12,37 @@
     <link rel="stylesheet" href="./CSS/body_LP.css">
     <link rel="stylesheet" href="./CSS/stylesheet.css">
     <link rel="stylesheet" href="./CSS/slideshow.css">
+    <link rel="stylesheet" href="./CSS/nav-bar.css">
+
 </head>
 
 <body class="black_background">
-
+    
 <header>
-header
+    <nav>
+        <div class="top-nav">
+            <img class="icon-img" src="./Assets/icon/user.png">
+            <img class="icon-img" src="./Assets/icon/search.png">
+            <img class="icon-img" src="./Assets/icon/global.png">
+        </div>
+        <img class="brand" src="./Assets/logo vikingtidmuseet.png"/>
+        <input type="checkbox" id="nav">
+        <label for="nav">
+          <span></span>
+          <span></span>
+          <span></span>
+        </label>
+        <ul class="menu">
+          <li>Experiences</li>
+          <li>Café</li>
+          <li>Gift shop</li>
+          <li>Plan your visit</li>
+          <li>Tickets</li>
+        </ul>
+      </nav>
+    
 </header>
+
 
     <div class="Hero">
         <div class="hero-container">
