Video&textbox - Experiences

--- a/Explore_the_museum.html
+++ b/Explore_the_museum.html
@@ -59,7 +59,7 @@
 
             <div class="vid-textbox-wrapper card_box white_text">
                     <h3>VR</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis alias totam cumque saepe quibusdam 
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis alias totam cumque saepe quibusdam 
                         dolore ea dignissimos rem debitis doloribus corporis hic animi voluptas, recusandae, expedita reprehenderit 
                         commodi blanditiis officiis ullam ipsum nam eligendi ipsam asperiores cum. Libero, eaque unde.</p>
             </div>
