endret på knap hero og Video

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <div class="hero_box card_box white_text">
                 <p>Mon - Fri 10-19 | Sat - Sun 11-20</p>
                 <h1>Explore the Museum of the Viking Age</h1>
+                <button class="Hero-but">Buy tickets</button>
             </div>
             
         </div>
@@ -127,7 +128,7 @@
           <div class="Vidcta">
               <h2> Explore the museum! </h2>
 
-              <button class="TmTe"> <h3>Take me to experiences</h3> </button>
+              <button class="c-a-btn-slide">Take me to experiences</button>
           </div>
     </div>
 
