--- a/Osebergship_overlay.html
+++ b/Osebergship_overlay.html
@@ -18,24 +18,30 @@
 <body>
 
 <main>
+<br>
+    <div class="overlay__wrapper">
+        <img class="overlay_img" src="./Assets/Osebergskipet_SMALL.jpeg" alt="Oseberg ship">
 
-<div class="overlay__wrapper">
-    <div class="overlay_img" src="./Assets/Oseberg_skipet" alt="Oseberg ship">
+        <div class="overlay_text">
+            <button class="x-out">X</button>
+            <h3>Oseberg ship</h3>
+            <p class="o-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Assumenda asperiores accusamus ipsa, soluta cupiditate, 
+                velit necessitatibus dicta architecto nisi voluptatum 
+                possimus illo dolorem aliquid ipsum voluptates aut autem, 
+                repellendus quod amet. Error magnam praesentium culpa 
+                repellendus ab maiores voluptatum ratione, quod, expedita 
+                excepturi quidem asperiores ipsam! Odit explicabo sapiente 
+                quae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, 
+                quo voluptatum vel perspiciatis non consectetur error nihil, ullam laborum 
+                sint eos facere vitae aut nemo id doloribus, dolorum odit. Sint, tempore vero
+                ipsa unde, quis distinctio officiis et voluptas optio vitae numquam est veritatis 
+                ullam! Totam consequuntur commodi delectus odit!</p>
+                
+            <button class="c-a-btn-slide o-button">Tickets</button>
+            <br>
+        </div>
     </div>
-
-    <div class="overlay_text">
-        <h3>Oseberg ship</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Assumenda asperiores accusamus ipsa, soluta cupiditate, 
-            velit necessitatibus dicta architecto nisi voluptatum 
-            possimus illo dolorem aliquid ipsum voluptates aut autem, 
-            repellendus quod amet. Error magnam praesentium culpa 
-            repellendus ab maiores voluptatum ratione, quod, expedita 
-            excepturi quidem asperiores ipsam! Odit explicabo sapiente 
-            quae.</p>
-        
-    </div>
-</div>
 
 
 
