--- a/Explore_the_museum.html
+++ b/Explore_the_museum.html
@@ -1,59 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vikingtidsmuseet</title>
-    <link rel="stylesheet" href="./CSS/reset.css">
-    <link rel="stylesheet" href="./CSS/colors.css">
-    <link rel="stylesheet" href="./CSS/root.css">
-    <link rel="stylesheet" href="./CSS/textstyles.css">
-    <link rel="stylesheet" href="./CSS/body_LP.css">
-    <link rel="stylesheet" href="./CSS/stylesheet.css">
-    <link rel="stylesheet" href="./CSS/slideshow.css">
-    <link rel="stylesheet" href="./CSS/Card_img_text.css">
-</head>
-
-<body>
-    
+    <link rel="stylesheet" href="./CSS/reset.css" />
+    <link rel="stylesheet" href="./CSS/colors.css" />
+    <link rel="stylesheet" href="./CSS/root.css" />
+    <link rel="stylesheet" href="./CSS/textstyles.css" />
+    <link rel="stylesheet" href="./CSS/body_LP.css" />
+    <link rel="stylesheet" href="./CSS/stylesheet.css" />
+    <link rel="stylesheet" href="./CSS/slideshow.css" />
+    <link rel="stylesheet" href="./CSS/Card_img_text.css" />
+    <link rel="stylesheet" href="./CSS/nav-bar.css" />
+  </head>
+  <header>
+    <nav>
+      <div class="top-nav">
+        <img class="icon-img" src="./Assets/icon/user.png" />
+        <img class="icon-img" src="./Assets/icon/search.png" />
+        <img class="icon-img" src="./Assets/icon/global.png" />
+      </div>
+      <a href="./index.html"
+        ><img class="brand" src="./Assets/logo vikingtidmuseet.png"
+      /></a>
+      <input type="checkbox" id="nav" />
+      <label for="nav">
+        <span></span>
+        <span></span>
+        <span></span>
+      </label>
+      <ul class="menu">
+        <li>
+          <a class="menu-font" href="./Explore_the_museum.html">Experiences</a>
+        </li>
+        <li><a class="menu-font" href="">Café</a></li>
+        <li><a class="menu-font" href="">Gift shop</a></li>
+        <li>
+          <a class="menu-font" href="./Plan_your_trip.html">Plan your visit</a>
+        </li>
+        <li><a class="menu-font" href="./Tickets.html">Tickets</a></li>
+      </ul>
+    </nav>
+  </header>
+  <body>
     <main>
-        <section>
-            <h2 class="white_text">Vikingships</h2>
-                <div class="card__wrapper">
-                    <div class="card__img">
-                        <img class="card_img_img" src="./Assets/Oseberg_skipet.jpeg">
+      <section>
+        <h2 class="white_text">Vikingships</h2>
+        <div class="card__wrapper">
+          <div class="card__img">
+            <img class="card_img_img" src="./Assets/Oseberg_skipet.jpeg" />
+          </div>
 
-                    </div>
+          <div class="card__text card_box white_text">
+            <h3>Oseberg ship</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi porta
+              sit mauris faucibus aliquet et. Volutpat aliquam et, diam libero
+              ultricies dictum et. Ullamcorper sed aliquam amet leo odio sed
+              dictum praesent ac. Nunc et, cras ligula iaculis vitae nisl
+              vivamus nec sagittis.
+            </p>
+          </div>
+        </div>
 
-                    <div class="card__text card_box white_text">
-                        <h3>Oseberg ship</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi porta sit mauris faucibus aliquet et. Volutpat aliquam et, diam libero ultricies dictum et. Ullamcorper sed aliquam amet leo odio sed dictum praesent ac. Nunc et, cras ligula iaculis vitae nisl vivamus nec sagittis.</p>
+        <div class="card__wrapper">
+          <div class="card__text--reverse card_box white_text">
+            <h3>Gokstad ship</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rutrum
+              nullam nisi enim, felis elit at diam tellus. Viverra diam lorem
+              nunc viverra amet.
+            </p>
+          </div>
 
-                    </div>
-                </div>
-
-                <div class="card__wrapper">
-
-
-                    <div class="card__text--reverse card_box white_text">
-                    <h3>Gokstad  ship</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rutrum nullam nisi enim, felis elit at diam tellus. Viverra diam lorem nunc viverra amet. </p>
-
-
-                    </div>
-
-                    <div class="card__img">
-                        <img class="card_img_img" src="./Assets/Gokstad_skipet.jpeg">
-
-                    </div>
-                    
-                </div>
-
-        </section>
-
+          <div class="card__img">
+            <img class="card_img_img" src="./Assets/Gokstad_skipet.jpeg" />
+          </div>
+        </div>
+      </section>
     </main>
-
-
-</body>
-
+  </body>
 </html>
