--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="hero_box card_box white_text">
                 <p>Mon - Fri 10-19 | Sat - Sun 11-20</p>
                 <h1>Explore the Museum of the Viking Age</h1>
-                <button class="Hero-but">Buy tickets</button>
+                <button class="Hero-but">Tickets</button>
             </div>
             
         </div>
@@ -55,7 +55,7 @@
                         <h3 class="title-slid">Utstilingens navn</h3>
                         <p class="p-tag-slid">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti possimus at ullam a praesentium neque eaque sit ea dicta ipsa, non, veniam eius aut numquam perspiciatis quidem laborum, reprehenderit amet.</p>
                         <p class="p-tag-slid">02.01.22 - 02.02.22</p>
-                        <button class="c-a-btn-slide">Buy tickets</button>
+                        <button class="c-a-btn-slide">Tickets</button>
                     </div>
                 </div>
             </div>
@@ -66,7 +66,7 @@
                         <h3 class="title-slid">Utstilingens navn</h3>
                         <p class="p-tag-slid">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti possimus at ullam a praesentium neque eaque sit ea dicta ipsa, non, veniam eius aut numquam perspiciatis quidem laborum, reprehenderit amet.</p>
                         <p class="p-tag-slid">02.01.22 - 02.02.22</p>
-                        <button class="c-a-btn-slide">Buy tickets</button>
+                        <button class="c-a-btn-slide">Tickets</button>
                     </div>
                 </div>
             </div>
@@ -77,7 +77,7 @@
                         <h3 class="title-slid">Utstilingens navn</h3>
                         <p class="p-tag-slid">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti possimus at ullam a praesentium neque eaque sit ea dicta ipsa, non, veniam eius aut numquam perspiciatis quidem laborum, reprehenderit amet.</p>
                         <p class="p-tag-slid">02.01.22 - 02.02.22</p>
-                        <button class="c-a-btn-slide">Buy tickets</button>
+                        <button class="c-a-btn-slide">Tickets</button>
                     </div>
                 </div>
             </div>
@@ -88,7 +88,7 @@
                         <h3 class="title-slid">Utstilingens navn</h3>
                         <p class="p-tag-slid">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti possimus at ullam a praesentium neque eaque sit ea dicta ipsa, non, veniam eius aut numquam perspiciatis quidem laborum, reprehenderit amet.</p>
                         <p class="p-tag-slid">02.01.22 - 02.02.22</p>
-                        <button class="c-a-btn-slide">Buy tickets</button>
+                        <button class="c-a-btn-slide">Tickets</button>
                     </div>
                 </div>
             </div>
@@ -99,7 +99,7 @@
                         <h3 class="title-slid">Utstilingens navn</h3>
                         <p class="p-tag-slid">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti possimus at ullam a praesentium neque eaque sit ea dicta ipsa, non, veniam eius aut numquam perspiciatis quidem laborum, reprehenderit amet.</p>
                         <p class="p-tag-slid">02.01.22 - 02.02.22</p>
-                        <button class="c-a-btn-slide">Buy tickets</button>
+                        <button class="c-a-btn-slide">Tickets</button>
                     </div>
                 </div>
             </div>
@@ -128,7 +128,8 @@
           <div class="Vidcta">
               <h2> Explore the museum! </h2>
 
-              <button class="c-a-btn-slide">Take me to experiences</button>
+              <button class="c-a-btn-slide"><a href="Explore_the_museum.html"></a>
+                  Take me to experiences</button>
           </div>
     </div>
 
