små fix- app bilde og kortffarge

--- a/Explore_the_museum.html
+++ b/Explore_the_museum.html
@@ -87,7 +87,7 @@
 
                     </div>
 
-                    <div class="card__text card_box white_text">
+                    <div class="card__text  white_text">
                         <h3>Oseberg ship</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi porta sit mauris faucibus aliquet et. Volutpat aliquam et,
                              diam libero ultricies dictum et. Ullamcorper sed aliquam amet leo odio sed dictum praesent ac.
@@ -100,7 +100,7 @@
                 <div class="card__wrapper">
 
 
-                    <div class="card__text--reverse card_box white_text">
+                    <div class="card__text--reverse  white_text">
                     <h3>Gokstad  ship</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rutrum nullam nisi enim, felis elit at diam tellus.
                              Viverra diam lorem nunc viverra amet. </p>
