--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     </div>
 
     <div class="con app">
-      <h1>APP</h1>
+      <img src="./Assets/App-splash.jpg">
     </div>
 
     <div class="con ren">
