Oppdatert knapper med innhold

--- a/Osebergship_overlay.html
+++ b/Osebergship_overlay.html
@@ -23,7 +23,7 @@
         <img class="overlay_img" src="./Assets/Osebergskipet_SMALL.jpeg" alt="Oseberg ship">
 
         <div class="overlay_text">
-            <button class="x-out">X</button>
+            <a href="Explore_the_museum.html"><button class="x-out">X</button></a>
             <h3>Oseberg ship</h3>
             <p class="o-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Assumenda asperiores accusamus ipsa, soluta cupiditate, 
