--- a/index.html
+++ b/index.html
@@ -128,8 +128,9 @@
           <div class="Vidcta">
               <h2> Explore the museum! </h2>
 
-              <button class="c-a-btn-slide"><a href="Explore_the_museum.html"></a>
-                  Take me to experiences</button>
+              <a href="Explore_the_museum.html"><button class="c-a-btn-slide">Take me to experiences</button>
+              </a>
+                  
           </div>
     </div>
 
