--- a/Explore_the_museum.html
+++ b/Explore_the_museum.html
@@ -61,7 +61,7 @@
                     <div class="card__text card_box white_text">
                         <h3>Oseberg ship</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi porta sit mauris faucibus aliquet et. Volutpat aliquam et, diam libero ultricies dictum et. Ullamcorper sed aliquam amet leo odio sed dictum praesent ac. Nunc et, cras ligula iaculis vitae nisl vivamus nec sagittis.</p>
-
+                        <a href="Osebergship_overlay.html"><button class="c-a-btn-slide">Learn more</button></a>
                     </div>
                 </div>
 
@@ -94,6 +94,7 @@
                     <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis alias totam cumque saepe quibusdam 
                         dolore ea dignissimos rem debitis doloribus corporis hic animi voluptas, recusandae, expedita reprehenderit 
                         commodi blanditiis officiis ullam ipsum nam eligendi ipsam asperiores cum. Libero, eaque unde.</p>
+                    <a href=""><button class="c-a-btn-slide">Tickets</button></a>
             </div>
            
         
