2sec nav barer?? + headar på tickets-side

--- a/Tickets.html
+++ b/Tickets.html
@@ -14,27 +14,43 @@
     <link rel="stylesheet" href="./CSS/Card_img_text.css">
     <link rel="stylesheet" href="./CSS/slideshow.css">
     <link rel="stylesheet" href="./CSS/video.css">
+    <link rel="stylesheet" href="./CSS/nav-bar.css" />
 
 </head>
 
 <body class="black_background">
 
-<header>
-    <div class="support__menu">
-        <div class="support__menu__container">
-            
-            <img src="Assets/avatar.svg">
+    <header>
+        <nav>
+          <div class="top-nav">
+            <img class="icon-img" src="./Assets/icon/user.png" />
+            <img class="icon-img" src="./Assets/icon/search.png" />
+            <img class="icon-img" src="./Assets/icon/global.png" />
+          </div>
+          <a href="./index.html"
+            ><img class="brand" src="./Assets/logo vikingtidmuseet.png"
+          /></a>
+          <input type="checkbox" id="nav" />
+          <label for="nav">
+            <span></span>
+            <span></span>
+            <span></span>
+          </label>
+          <ul class="menu">
+            <li>
+              <a class="menu-font" href="./Explore_the_museum.html">Experiences</a>
+            </li>
+            <li><a class="menu-font" href="">Café</a></li>
+            <li><a class="menu-font" href="">Gift shop</a></li>
+            <li>
+              <a class="menu-font" href="./Plan_your_trip.html">Plan your visit</a>
+            </li>
+            <li><a class="menu-font" href="./Tickets.html">Tickets</a></li>
+          </ul>
+        </nav>
+      </header>
 
-            <img src="Assets/search.svg">
-        
-            <img src="Assets/language.svg">
-        </div>
-
-    </div>
-
-</header>
-
-    <div class="Hero">
+    <div class="Hero_Tickets">
         <div class="Hero">
             <div class="hero-container">
                 <img src="./Assets/bar og dame.png" alt="Bueskytter med mørk bakgrunn" class="hero__cover">
