--- a/Plan_your_trip.html
+++ b/Plan_your_trip.html
@@ -12,24 +12,40 @@
     <link rel="stylesheet" href="./CSS/body_LP.css">
     <link rel="stylesheet" href="./CSS/stylesheet.css">
     <link rel="stylesheet" href="./CSS/slideshow.css">
+    <link rel="stylesheet" href="./CSS/nav-bar.css" />
 </head>
 
 <body class="black_background">
 
-<header>
-    <div class="support__menu">
-        <div class="support__menu__container">
-            
-            <img src="Assets/avatar.svg">
-
-            <img src="Assets/search.svg">
-        
-            <img src="Assets/language.svg">
-        </div>
-
-    </div>
-
-</header>
+    <header>
+        <nav>
+          <div class="top-nav">
+            <img class="icon-img" src="./Assets/icon/user.png" />
+            <img class="icon-img" src="./Assets/icon/search.png" />
+            <img class="icon-img" src="./Assets/icon/global.png" />
+          </div>
+          <a href="./index.html"
+            ><img class="brand" src="./Assets/logo vikingtidmuseet.png"
+          /></a>
+          <input type="checkbox" id="nav" />
+          <label for="nav">
+            <span></span>
+            <span></span>
+            <span></span>
+          </label>
+          <ul class="menu">
+            <li>
+              <a class="menu-font" href="./Explore_the_museum.html">Experiences</a>
+            </li>
+            <li><a class="menu-font" href="">Café</a></li>
+            <li><a class="menu-font" href="">Gift shop</a></li>
+            <li>
+              <a class="menu-font" href="./Plan_your_trip.html">Plan your visit</a>
+            </li>
+            <li><a class="menu-font" href="./Tickets.html">Tickets</a></li>
+          </ul>
+        </nav>
+      </header>
 
 <main>
     <section class="HTGT white_text">
