--- a/Explore_the_museum.html
+++ b/Explore_the_museum.html
@@ -108,7 +108,7 @@
                     </div>
 
                     <div class="card__text card_box white_text">
-                        <h3>Oseberg ship</h3>
+                        <h3>Tune ship</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi porta sit mauris faucibus aliquet et. Volutpat aliquam et,
                              diam libero ultricies dictum et. Ullamcorper sed aliquam amet leo odio sed dictum praesent ac.
                               Nunc et, cras ligula iaculis vitae nisl vivamus nec sagittis.</p>
