--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                   dicta ipsa, non, veniam eius aut numquam perspiciatis quidem
                   laborum, reprehenderit amet.
                 </p>
-                <p class="p-tag-slid">02.01.22 - 02.02.22</p>
-                <button class="c-a-btn-slide">Buy tickets</button>
+                <p class="p-tag-slid-date">02.01.22 - 02.02.22</p>
+                <button class="c-a-btn-slide">Tickets</button>
               </div>
             </div>
           </div>
@@ -100,7 +100,7 @@
                   laborum, reprehenderit amet.
                 </p>
                 <p class="p-tag-slid">02.01.22 - 02.02.22</p>
-                <button class="c-a-btn-slide">Buy tickets</button>
+                <button class="c-a-btn-slide">Tickets</button>
               </div>
             </div>
           </div>
@@ -120,7 +120,7 @@
                   laborum, reprehenderit amet.
                 </p>
                 <p class="p-tag-slid">02.01.22 - 02.02.22</p>
-                <button class="c-a-btn-slide">Buy tickets</button>
+                <button class="c-a-btn-slide">Tickets</button>
               </div>
             </div>
           </div>
@@ -140,7 +140,7 @@
                   laborum, reprehenderit amet.
                 </p>
                 <p class="p-tag-slid">02.01.22 - 02.02.22</p>
-                <button class="c-a-btn-slide">Buy tickets</button>
+                <button class="c-a-btn-slide">Tickets</button>
               </div>
             </div>
           </div>
@@ -268,7 +268,7 @@
         </div>
       </div>
     </footer>
-
+    <scrip src="./js/sticky_nav.js"></script>
     <script src="js/slideshow.js"></script>
   </body>
 </html>
