nav fix - nav sett inn

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                   laborum, reprehenderit amet.
                 </p>
                 <p class="p-tag-slid">02.01.22 - 02.02.22</p>
-                <button class="c-a-btn-slide">Buy tickets</button>
+                <button class="c-a-btn-slide">Tickets</button>
               </div>
             </div>
           </div>
@@ -268,7 +268,6 @@
         </div>
       </div>
     </footer>
-    <scrip src="./js/sticky_nav.js"></script>
     <script src="js/slideshow.js"></script>
   </body>
 </html>
