--- a/Osebergship_overlay.html
+++ b/Osebergship_overlay.html
@@ -13,9 +13,43 @@
     <link rel="stylesheet" href="./CSS/slideshow.css">
     <link rel="stylesheet" href="./CSS/Card_img_text.css">
     <link rel="stylesheet" href="./CSS/overlay.css">
+    <link rel="stylesheet" href="./CSS/nav-bar.css"/>
 </head>
 
 <body>
+    <header>
+        <nav>
+          <div class="top-nav">
+            <img class="icon-img" src="./Assets/icon/user.png" />
+            <img class="icon-img" src="./Assets/icon/search.png" />
+            <img class="icon-img" src="./Assets/icon/global.png" />
+          </div>
+          <a href="./index.html"
+            ><img class="brand" src="./Assets/logo vikingtidmuseet.png"
+          /></a>
+          <input type="checkbox" id="nav" />
+          <label for="nav">
+            <span></span>
+            <span></span>
+            <span></span>
+          </label>
+          <ul class="menu">
+            <li>
+              <a class="menu-font" href="./Explore_the_museum.html"
+                >Experiences</a
+              >
+            </li>
+            <li><a class="menu-font" href="">Café</a></li>
+            <li><a class="menu-font" href="">Gift shop</a></li>
+            <li>
+              <a class="menu-font" href="./Plan_your_trip.html"
+                >Plan your visit</a
+              >
+            </li>
+            <li><a class="menu-font" href="./Tickets.html">Tickets</a></li>
+          </ul>
+        </nav>
+      </header>
 
 <main>
 <br>
