media query, + små fix

--- a/Tickets.html
+++ b/Tickets.html
@@ -115,9 +115,8 @@
         </div>
     </div>
 
-    
+    <h2 class="white_text">Book your guide</h2>
     <div class="ren body vid-ex">
-        <h2 class="white_text">Book your guide</h2>
     <br>
         <img src="./Assets/barn med guide.png" alt="">
 </div>
@@ -208,7 +207,7 @@
     </div>
 
     <div class="con app">
-        <h1>APP</h1>   
+        <img src="./Assets/App-splash.jpg">  
     </div>
     
     <div class="con ren">
