la til overskrift på slider i index

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
       </div>
     </div>
 
+    <h2 class="white_text">Our newest exhibitions</h2>
+    
     <div class="con sli">
       <div class="container">
         <div class="slideshow-container">
