drop down is doing someting/ not done
its not done

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <span></span>
           <span></span>
         </label>
-        <ul class="menu">
+        <ul class="menu" id="nav">
           <li>
             <a class="menu-font" href="./Explore_the_museum.html"
               >Experiences</a
@@ -40,9 +40,42 @@
           <li><a class="menu-font" href="">Café</a></li>
           <li><a class="menu-font" href="">Gift shop</a></li>
           <li>
-            <a class="menu-font" href="./Plan_your_trip.html"
+            <a class="menu-font dropdown" href="./Plan_your_trip.html"
               >Plan your visit</a
             >
+
+            <ul>
+              <div class="">
+                <div>
+                  <li><a href="">Map</a></li>
+                  <li><a href="">Cafè</a></li>
+                  <li><a href="">Toalett</a></li>
+                  <li><a href="">Baby changing room</a></li>
+                  <li><a href="">Exhibition</a></li>
+                </div>
+                <div>
+                  <li><a href="">Handicap</a></li>
+                  <li><a href="">Wheelchair rental</a></li>
+                  <li><a href="">Help</a></li>
+                  <li><a href="">Headset</a></li>
+                  <li><a href="">Quiet zone</a></li>
+                </div>
+                <div>
+                  <li><a href="">How to get there</a></li>
+                  <li><a href="">Distance</a></li>
+                  <li><a href="">Public transport</a></li>
+                  <li><a href="">Parking & shuttlebus</a></li>
+                </div>
+                <div>
+                  <li><a href="">General info</a></li>
+                  <li><a href="">Lockers info</a></li>
+                  <li><a href="">Tour guides</a></li>
+                  <li><a href="">Expedia</a></li>
+                </div>
+              </div>
+            </ul>
+
+
           </li>
           <li><a class="menu-font" href="./Tickets.html">Tickets</a></li>
         </ul>
