--- a/Explore_the_museum.html
+++ b/Explore_the_museum.html
@@ -50,7 +50,7 @@
    
 
     <main>
-        <div class="Hero>
+        <div class="Hero">
             <div class="hero-container">
                 <img src="./Assets/bueskytter.jpg" alt="Bueskytter med mørk bakgrunn" class="hero__cover">
                 
@@ -145,7 +145,7 @@
                                    <h3 class="title-slid">Utstilingens navn</h3>
                                    <p class="p-tag-slid">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti possimus at ullam a praesentium neque eaque sit ea dicta ipsa, non, veniam eius aut numquam perspiciatis quidem laborum, reprehenderit amet.</p>
                                    <p class="p-tag-slid">02.01.22 - 02.02.22</p>
-                                   <button class="c-a-btn-slide">Buy tickets</button>
+                                   <button class="c-a-btn-slide">Tickets</button>
                                </div>
                            </div>
                        </div>
@@ -156,7 +156,7 @@
                                    <h3 class="title-slid">Utstilingens navn</h3>
                                    <p class="p-tag-slid">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti possimus at ullam a praesentium neque eaque sit ea dicta ipsa, non, veniam eius aut numquam perspiciatis quidem laborum, reprehenderit amet.</p>
                                    <p class="p-tag-slid">02.01.22 - 02.02.22</p>
-                                   <button class="c-a-btn-slide">Buy tickets</button>
+                                   <button class="c-a-btn-slide">Tickets</button>
                                </div>
                            </div>
                        </div>
@@ -167,7 +167,7 @@
                                    <h3 class="title-slid">Utstilingens navn</h3>
                                    <p class="p-tag-slid">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti possimus at ullam a praesentium neque eaque sit ea dicta ipsa, non, veniam eius aut numquam perspiciatis quidem laborum, reprehenderit amet.</p>
                                    <p class="p-tag-slid">02.01.22 - 02.02.22</p>
-                                   <button class="c-a-btn-slide">Buy tickets</button>
+                                   <button class="c-a-btn-slide">Tickets</button>
                                </div>
                            </div>
                        </div>
@@ -178,7 +178,7 @@
                                    <h3 class="title-slid">Utstilingens navn</h3>
                                    <p class="p-tag-slid">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti possimus at ullam a praesentium neque eaque sit ea dicta ipsa, non, veniam eius aut numquam perspiciatis quidem laborum, reprehenderit amet.</p>
                                    <p class="p-tag-slid">02.01.22 - 02.02.22</p>
-                                   <button class="c-a-btn-slide">Buy tickets</button>
+                                   <button class="c-a-btn-slide">Tickets</button>
                                </div>
                            </div>
                        </div>
@@ -189,7 +189,7 @@
                                    <h3 class="title-slid">Utstilingens navn</h3>
                                    <p class="p-tag-slid">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti possimus at ullam a praesentium neque eaque sit ea dicta ipsa, non, veniam eius aut numquam perspiciatis quidem laborum, reprehenderit amet.</p>
                                    <p class="p-tag-slid">02.01.22 - 02.02.22</p>
-                                   <button class="c-a-btn-slide">Buy tickets</button>
+                                   <button class="c-a-btn-slide">Tickets</button>
                                </div>
                            </div>
                        </div>
@@ -259,7 +259,7 @@
                           Malesuada ac dui lectus ultricies lobortis vestibulum non accumsan. Sed viverra duis aenean enim tortor.
                            Sollicitudin auctor fermentum feugiat at.
                 </p>
-                <button class="c-a-btn-slide">Buy tickets</button>
+                <button class="c-a-btn-slide">Tickets</button>
             </div>
 
             <div class="card__wrapper">
