--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="mySlides fade">
                 <div class="card-slid">
                     <img class="slide-img img-size-slider" src="./img/face-stick.jpeg" alt="900 year viking sho">
-                    <div class="slide-right-÷text">
+                    <div class="slide-right-text">
                         <h3 class="title-slid">Utstilingens navn</h3>
                         <p class="p-tag-slid">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti possimus at ullam a praesentium neque eaque sit ea dicta ipsa, non, veniam eius aut numquam perspiciatis quidem laborum, reprehenderit amet.</p>
                         <p class="p-tag-slid">02.01.22 - 02.02.22</p>
