la til mobilversjon av add-reklame

--- a/Tickets.html
+++ b/Tickets.html
@@ -207,7 +207,8 @@
     </div>
 
     <div class="con app">
-        <img src="./Assets/App-splash.jpg">  
+        <img class="mobilehide" src="./Assets/App-splash.jpg">
+        <img class="desktophide" src="./Assets/App-splash-mobile.jpg"> 
     </div>
     
     <div class="con ren">
