--- a/Plan_your_trip.html
+++ b/Plan_your_trip.html
@@ -48,10 +48,10 @@
       </header>
 
 <main>
-    <section class="HTGT white_text">
+    <div class="HTGT white_text">
         <h1>How to get there</h1>
         <h3>Below you will find alternative routes to the Museum of the Viking Age.</h3>
-    </section>
+</div>
 
    <section class="HTGT__Wrapper white_text">
        <div class="HTGT__textcontent">
