Små fix - overalt

--- a/Explore_the_museum.html
+++ b/Explore_the_museum.html
@@ -73,7 +73,7 @@
 
                     <div class="card__text  white_text">
                         <h3>Oseberg ship</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi porta sit mauris faucibus aliquet et. Volutpat aliquam et, diam libero ultricies dictum et. Ullamcorper sed aliquam amet leo odio sed dictum praesent ac. Nunc et, cras ligula iaculis vitae nisl vivamus nec sagittis.</p>
+                        <p class="pgh-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi porta sit mauris faucibus aliquet et. Volutpat aliquam et, diam libero ultricies dictum et. Ullamcorper sed aliquam amet leo odio sed dictum praesent ac. Nunc et, cras ligula iaculis vitae nisl vivamus nec sagittis.</p>
                         <a href="Osebergship_overlay.html"><button class="c-a-btn-slide">Learn more</button></a>
 
                     </div>
