--- a/Tickets.html
+++ b/Tickets.html
@@ -50,15 +50,15 @@
         </nav>
       </header>
 
-    <div class="Hero_Tickets">
+    <div>
         <div class="Hero">
             <div class="hero-container">
                 <img src="./Assets/bar og dame.png" alt="Bueskytter med mørk bakgrunn" class="hero__cover">
                 
                 <div class="hero_box_secondary card_box white_text">
-                    <p>Mon - Fri 10-19  Sat - Sun 11-20</p>
+                    <p>Mon - Fri 10-19 | Sat - Sun 11-20</p>
                     <h1>Tickets</h1>
-                    <button class="c-a-btn-slide">Tickets</button>
+                    <a href="/webstore.html"><button class="c-a-btn-slide">Tickets</button></a>
                 </div>
                 
             </div>
@@ -79,7 +79,7 @@
             <div class="card__text card_box white_text">
                 <h3>Single tickets</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi porta sit mauris faucibus aliquet et. Volutpat aliquam et, diam libero ultricies dictum et. Ullamcorper sed aliquam amet leo odio sed dictum praesent ac. Nunc et, cras ligula iaculis vitae nisl vivamus nec sagittis.</p>
-                <a href=""><button class="c-a-btn-slide">Choose your tickets</button></a>
+                <a href="./webstore.html"><button class="c-a-btn-slide">Choose your tickets</button></a>
             </div>
         </div>
 
@@ -89,7 +89,7 @@
             <div class="card__text--reverse card_box white_text">
             <h3>Family tickets</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rutrum nullam nisi enim, felis elit at diam tellus. Viverra diam lorem nunc viverra amet. </p>
-                <a href=""><button class="c-a-btn-slide">Choose your tickets</button></a>
+                <a href="./webstore.html"><button class="c-a-btn-slide">Choose your tickets</button></a>
 
             </div>
 
@@ -110,7 +110,7 @@
             <div class="card__text card_box white_text">
                 <h3>Group tickets</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi porta sit mauris faucibus aliquet et. Volutpat aliquam et, diam libero ultricies dictum et. Ullamcorper sed aliquam amet leo odio sed dictum praesent ac. Nunc et, cras ligula iaculis vitae nisl vivamus nec sagittis.</p>
-                <a href=""><button class="c-a-btn-slide">Choose your tickets</button></a>
+                <a href="./webstore.html"><button class="c-a-btn-slide">Choose your tickets</button></a>
             </div>
         </div>
     </div>
