--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="hero_box card_box white_text">
                 <p>Mon - Fri 10-19 | Sat - Sun 11-20</p>
                 <h1>Explore the Museum of the Viking Age</h1>
-                <button class="Hero-but">Tickets</button>
+                <a href="./Tickets.html"><button class="Hero-but">Tickets</button></a>
             </div>
         </div>
       </div>
