--- a/webstore.html
+++ b/webstore.html
@@ -53,8 +53,8 @@
     </header>
 
     <body>
-      <div class="Hero_Tickets">
-        <div class="Hero">
+      <div>
+        <div class="He-1">
           <div class="small-hero-container">
             <img
               src="./Assets/bar og dame.png"
