i try to fix mobile version index

--- a/Explore_the_museum.html
+++ b/Explore_the_museum.html
@@ -119,9 +119,13 @@
                 <br>
 
             <div class="ren body vid-ex">
-                    <video autoplay muted loop class="Video">
-                        <source src="./Assets/full_v001_0001-0618.mp4" type="video/mp4">
-                    </video>
+                <video class="mobilehide"  autoplay muted loop class="Video">
+                    <source src="./Assets/full_v001_0001-0618.mp4" type="video/mp4">
+                  </video>
+        
+                  <video class="desktophide" autoplay muted loop class="Video">
+                    <source src="./Assets/video-mobile.mp4" type="video/mp4">
+                  </video>
             </div>
 
             <div class="vid-textbox-wrapper card_box white_text">
