--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     </header>
     <div class="Hero">
         <div class="hero-container">
-            <img src="./Assets/Museet.jpg" alt="" class="hero__cover">
+            <img src="./Assets/Museet.jpg" alt="the new museum, opening in 2025" class="hero__cover">
             
             <div class="hero_box card_box white_text">
-                <p>Mon - Fri 10-19 | Sat - Sun 11-20</p>
+                <p class="hero_box-spacing" >Mon - Fri 10-19 | Sat - Sun 11-20</p>
                 <h1>Explore the Museum of the Viking Age</h1>
                 <a href="./Tickets.html"><button class="Hero-but">Tickets</button></a>
             </div>
@@ -61,7 +61,7 @@
       </div>
     </div>
 
-    <h2 class="white_text">Our newest exhibitions</h2>
+    <h2 class="white_text centeredtext ">Our newest exhibitions</h2>
     
     <div class="con sli">
       <div class="container">
@@ -135,17 +135,29 @@
       </div>
     </div>
 
-    <div class="con app">
-      <img class="mobilehide" src="./Assets/App-splash.jpg">
-      <img class="desktophide" src="./Assets/App-splash-mobile.jpg">
+
+
+    <div class="itry mobilehide">
+      <img src="./Assets/App-splash.jpg">
     </div>
 
+    <div class="itry desktophide">
+      <img src="./Assets/App-splash-mobile.jpg">
+    </div>
+
+
     <div class="con ren">
-        <video autoplay muted loop class="Video">
+        <video class="mobilehide"  autoplay muted loop class="Video">
             <source src="./Assets/full_v001_0001-0618.mp4" type="video/mp4">
           </video>
-          <div class="Vidcta">
-              <h2> Explore the museum! </h2>
+
+          <video class="desktophide" autoplay muted loop class="Video">
+            <source src="./Assets/video-mobile.mp4" type="video/mp4">
+          </video>
+
+
+          <div class="Vidcta ">
+              <h2>Explore the museum! </h2>
 
               <a href="Explore_the_museum.html"><button class="c-a-btn-slide">Take me to experiences</button>
               </a>
