nav drop down for web

--- a/index.html
+++ b/index.html
@@ -45,32 +45,38 @@
             >
 
             <ul>
-              <div class="">
-                <div>
-                  <li><a href="">Map</a></li>
-                  <li><a href="">Cafè</a></li>
-                  <li><a href="">Toalett</a></li>
-                  <li><a href="">Baby changing room</a></li>
-                  <li><a href="">Exhibition</a></li>
+              <div class="drop-container flex">
+                <div class="">
+                  <div class="spacing-dropdown">
+                    <li class="dropdown-title"><a class="drop-d-a-t" href="">Map</a></li>
+                    <div class="mini-space"></div>
+                    <li><a class="drop-d-a d-text" href="">Cafè</a></li>
+                    <li><a class="drop-d-a d-text" href="">Toalett</a></li>
+                    <li><a class="drop-d-a d-text" href="">Baby changing room</a></li>
+                    <li><a class="drop-d-a d-text" href="">Exhibition</a></li>
+                  </div>
                 </div>
-                <div>
-                  <li><a href="">Handicap</a></li>
-                  <li><a href="">Wheelchair rental</a></li>
-                  <li><a href="">Help</a></li>
-                  <li><a href="">Headset</a></li>
-                  <li><a href="">Quiet zone</a></li>
+                <div class="spacing-dropdown">
+                  <li class="dropdown-title"><a class="drop-d-a-t" href="">Handicap</a></li>
+                  <div class="mini-space"></div>
+                  <li><a class="drop-d-a d-text" href="">Wheelchair rental</a></li>
+                  <li><a class="drop-d-a d-text" href="">Help</a></li>
+                  <li><a class="drop-d-a d-text" href="">Headset</a></li>
+                  <li><a class="drop-d-a d-text" href="">Quiet zone</a></li>
                 </div>
-                <div>
-                  <li><a href="">How to get there</a></li>
-                  <li><a href="">Distance</a></li>
-                  <li><a href="">Public transport</a></li>
-                  <li><a href="">Parking & shuttlebus</a></li>
+                <div class="spacing-dropdown">
+                  <li class="dropdown-title"><a class="drop-d-a-t" href="">How to get there</a></li>
+                  <div class="mini-space"></div>
+                  <li><a class="drop-d-a d-text" href="">Distance</a></li>
+                  <li><a class="drop-d-a d-text" href="">Public transport</a></li>
+                  <li><a class="drop-d-a d-text" href="">Parking & shuttlebus</a></li>
                 </div>
-                <div>
-                  <li><a href="">General info</a></li>
-                  <li><a href="">Lockers info</a></li>
-                  <li><a href="">Tour guides</a></li>
-                  <li><a href="">Expedia</a></li>
+                <div class="spacing-dropdown">
+                  <li class="dropdown-title"><a class="drop-d-a-t" href="">General info</a></li>
+                  <div class="mini-space"></div>
+                  <li><a class="drop-d-a d-text" href="">Lockers info</a></li>
+                  <li><a class="drop-d-a d-text" href="">Tour guides</a></li>
+                  <li><a class="drop-d-a d-text" href="">Expedia</a></li>
                 </div>
               </div>
             </ul>
