--- a/Explore_the_museum.html
+++ b/Explore_the_museum.html
@@ -61,7 +61,7 @@
           />
 
           <div class="hero_box_secondary card_box white_text">
-            <p>Exhibtion tour guide every Saturday at 4pm</p>
+            <p class="nomarginplease hero_box-spacing">Exhibtion tour guide every Saturday at 4pm</p>
             <h1>Experiences</h1>
             <button class="c-a-btn-slide">Tickets</button>
           </div>
@@ -69,7 +69,7 @@
       </div>
 
       <section>
-        <h2 class="white_text">Vikingships</h2>
+        <h2 class="white_text centeredtext">Vikingships</h2>
         <div class="card__wrapper">
           <div class="card__img">
             <img class="card_img_img" src="./Assets/Oseberg_skipet.jpeg" />
@@ -77,7 +77,7 @@
 
           <div class="card__text white_text">
             <h3>Oseberg ship</h3>
-            <p class="pgh-text">
+            <p class="pgh-text nomarginplease">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi porta
               sit mauris faucibus aliquet et. Volutpat aliquam et, diam libero
               ultricies dictum et. Ullamcorper sed aliquam amet leo odio sed
@@ -93,7 +93,7 @@
         <div class="card__wrapper">
           <div class="card__text--reverse white_text">
             <h3>Gokstad ship</h3>
-            <p>
+            <p class="nomarginplease">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rutrum
               nullam nisi enim, felis elit at diam tellus. Viverra diam lorem
               nunc viverra amet.
@@ -117,7 +117,7 @@
 
           <div class="card__text card_box white_text">
             <h3>Tune ship</h3>
-            <p>
+            <p class="nomarginplease">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi porta
               sit mauris faucibus aliquet et. Volutpat aliquam et, diam libero
               ultricies dictum et. Ullamcorper sed aliquam amet leo odio sed
@@ -137,7 +137,7 @@
           </video>
         </div>
 
-        <div class="vid-textbox-wrapper card_box white_text">
+        <div class="vid-textbox-wrapper card_box centeredtext white_text">
           <h3>VR</h3>
           <p class="text">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis
@@ -149,7 +149,7 @@
           <a href=""><button class="c-a-btn-slide">Tickets</button></a>
         </div>
 
-        <h2 class="white_text">Exhibitions</h2>
+        <h2 class="white_text centeredtext">Exhibitions</h2>
         <br />
 
         <div class="con sli">
@@ -196,7 +196,7 @@
                 </div>
 
     
-                <h2 class="white_text"> VR Experience</h2>
+                <h2 class="white_text centeredtext"> VR Experience</h2>
                 <br>
 
             <div class="ren body vid-ex">
@@ -217,7 +217,7 @@
                     <a href=""><button class="c-a-btn-slide">Tickets</button></a>
             </div>
 
-            <h2 class="white_text">Exhibitions</h2>
+            <h2 class="white_text centeredtext">Exhibitions</h2>
             <br>
 
             <div class="con sli">
@@ -293,7 +293,7 @@
                </div>
            
 
-               <h2 class="white_text">Workshops</h2>
+               <h2 class="white_text centeredtext">Workshops</h2>
                 <div class="card__wrapper">
                     <div class="card__img">
                         <img class="card_img_img" src="./Assets/Viking_frue.png">
