--- a/Tickets.html
+++ b/Tickets.html
@@ -56,7 +56,7 @@
                 <img src="./Assets/bar og dame.png" alt="Bueskytter med mørk bakgrunn" class="hero__cover">
                 
                 <div class="hero_box_secondary card_box white_text">
-                    <p>Mon - Fri 10-19 | Sat - Sun 11-20</p>
+                    <p class="nomarginplease hero_box-spacing">Mon - Fri 10-19 | Sat - Sun 11-20</p>
                     <h1>Tickets</h1>
                     <a href="/webstore.html"><button class="c-a-btn-slide">Tickets</button></a>
                 </div>
